# Payday

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  3aba946a1d86_add_payroll_wallets.py  bad1115bbe51_initial_schema.py  c4e8f2a91b03_add_users_table.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  database.py  deps.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  business.py  employee.py  enums.py  payroll_run.py  payroll_wallet.py  transaction_receipt.py  user.py
apps/api/app/routes/: __init__.py  analytics.py  auth.py  businesses.py  employees.py  health.py  payroll.py  wallets.py  webhooks.py
apps/api/app/schemas/: analytics.py  auth.py  business.py  employee.py  payroll.py  wallet.py
apps/api/app/services/: alatpay_service.py  analytics.py  payroll.py  wallet.py
apps/api/app/services/alatpay/: __init__.py  client.py  exceptions.py  models.py  service.py  settlements.py  wallets.py
apps/api/app/services/alatpay/payout/: __init__.py  adapter.py  client.py  crypto.py  models.py  service.py
apps/api/tests/: conftest.py  fakes.py  test_alatpay_service.py  test_auth.py  test_disbursement.py  test_payout.py  test_payroll_flow.py
apps/web/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts
apps/web/.next/: app-build-manifest.json  react-loadable-manifest.json  trace
(+122 files in other folders)
